[workspace]
members = ["rustemon", "rustemon-static-test"]
resolver = "2"

[workspace.package]
authors = ["Martin Lemesle"]
description = "Library wrapping the awesome PokeAPI"
documentation = "https://docs.rs/rustemon/latest/rustemon/"
edition = "2024"
homepage = "https://github.com/mlemesle/rustemon"
keywords = ["pokeapi", "pokemon", "wrapper", "http", "rest"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mlemesle/rustemon"
version = "4.2.0"
