[workspace]
members = ["rustemon", "rustemon-static-test"]
resolver = "2"

[workspace.package]
authors = ["Martin Lemesle"]
description = "Library wrapping the awesome PokeAPI"
documentation = "https://docs.rs/rustemon/latest/rustemon/"
edition = "2024"
homepage = "https://github.com/mlemesle/rustemon"
keywords = ["pokeapi", "pokemon", "wrapper", "http", "rest"]
license = "MIT"
readme = "rustemon/README.md"
repository = "https://github.com/mlemesle/rustemon"
version = "4.3.0"

[workspace.dependencies]
serde = "1.0.219"
serde_json = "1.0.142"
