[package]
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "rustemon-static-test"
publish = false
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.98"
rustemon = { version = "4.2.0", path = "../rustemon", features = ["serialize"] }
serde = "1.0.219"
serde_json = "1.0.141"
tera = "1.20.0"
tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros"] }
