[package]
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "rustemon-static-test"
publish = false
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.100"
rustemon = { version = "4.3.0", path = "../rustemon", features = ["serialize"] }
serde.workspace = true
serde_json.workspace = true
tera = "1.20.1"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
