[package]
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "rustemon-static-test"
publish = false
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.104"
rustemon = { path = "../rustemon", features = ["serialize"] }
serde.workspace = true
serde_json.workspace = true
tera = "2.0.0"
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros"] }
