[package]
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "rustemon"
publish = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
serialize = []
static-resources = ["dep:serde_json"]

[dependencies]
http-cache-reqwest = { version = "0.15.1", features = ["manager-moka"] }
reqwest = { version = "0.12.15", features = ["json"] }
reqwest-middleware = "0.4.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.141", optional = true }
thiserror = "2.0.12"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
toml = "0.8"

[[example]]
name = "toml_serialize"
required-features = ["serialize"]

[[example]]
name = "check_static_resources"
required-features = ["static-resources"]
